// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. multiple ad slots 1`] = `
<style>
.IS1 {
  height: auto;
  overflow-x: hidden;
  overflow-y: hidden;
  width: 970px;
}

.IS2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -webkit-flex: 1;
  align-items: center;
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: 0%;
  -ms-flex: 1;
  -ms-flex-align: center;
}

.IS3 {
  height: auto;
  overflow-x: hidden;
  overflow-y: hidden;
  width: 1px;
}

.IS4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -webkit-flex: 1;
  align-items: center;
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: 0%;
  -ms-flex: 1;
  -ms-flex-align: center;
}

.IS5 {
  height: auto;
  overflow-x: hidden;
  overflow-y: hidden;
  width: 970px;
}

.IS6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -webkit-flex: 1;
  align-items: center;
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: 0%;
  -ms-flex: 1;
  -ms-flex-align: center;
}
</style>

<AdComposer>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="header"
  >
    <View
      className="IS2"
    >
      <div>
        <DOMContext
          baseUrl="https://www.thetimes.co.uk/"
          height={250}
          width={970}
        >
          <div
            className="IS1"
          />
        </DOMContext>
      </div>
    </View>
  </Ad>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="pixel"
  >
    <View
      className="IS4"
    >
      <div>
        <DOMContext
          baseUrl="https://www.thetimes.co.uk/"
          height={1}
          width={1}
        >
          <div
            className="IS3"
          />
        </DOMContext>
      </div>
    </View>
  </Ad>
  <Ad
    baseUrl="https://www.thetimes.co.uk/"
    contextUrl="https://www.thetimes.co.uk"
    isLoading={false}
    section="news"
    slotName="intervention"
  >
    <View
      className="IS6"
    >
      <div>
        <DOMContext
          baseUrl="https://www.thetimes.co.uk/"
          height={250}
          width={970}
        >
          <div
            className="IS5"
          />
        </DOMContext>
      </div>
    </View>
  </Ad>
</AdComposer>
`;

exports[`2. placeholder when isloading 1`] = `
<style>
.IS1 {
  left: 0px;
  position: absolute;
  top: 0px;
}

.IS2 {
  background-color: rgba(249,249,249,1.00);
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  border-top-width: 1px;
  border-right-width: 1px;
  border-bottom-width: 1px;
  border-left-width: 1px;
  color: rgba(105,105,105,1.00);
  font-family: TimesDigitalW04;
  font-size: 11px;
  letter-spacing: 1.5px;
  line-height: 15px;
  padding-bottom: 5px;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 5px;
  z-index: 1;
}

.IS3 {
  height: 250px;
  width: 970px;
}

.IS4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  align-items: center;
  background-color: rgba(249,249,249,1.00);
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  border-top-width: 1px;
  border-right-width: 1px;
  border-bottom-width: 1px;
  border-left-width: 1px;
  height: 250px;
  justify-content: center;
  -ms-flex-align: center;
  -ms-flex-pack: center;
  overflow-x: hidden;
  overflow-y: hidden;
  width: 970px;
}

.IS5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -webkit-box-pack: center;
  -webkit-flex: 1;
  -webkit-justify-content: center;
  align-items: center;
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: 0%;
  justify-content: center;
  -ms-flex: 1;
  -ms-flex-align: center;
  -ms-flex-pack: center;
}

.IS6 {
  -webkit-flex: 1;
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: 0%;
  -ms-flex: 1;
}

.IS7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -webkit-flex: 1;
  align-items: center;
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: 0%;
  -ms-flex: 1;
  -ms-flex-align: center;
}
</style>

<Ad
  baseUrl="https://www.thetimes.co.uk/"
  contextUrl="https://www.thetimes.co.uk"
  isLoading={true}
  section="news"
  slotName="header"
>
  <View
    className="IS7"
  >
    <div>
      <AdPlaceholder
        className="IS6"
        height={250}
        width={970}
      >
        <View
          className="IS5"
        >
          <div>
            <View
              className="IS4"
              testID="ad-placeholder"
            >
              <div
                className="IS3"
                data-testid="ad-placeholder"
              >
                <View
                  className="IS1"
                >
                  <div>
                    <Watermark
                      height={250}
                      viewBox="-630 120 1200 50"
                      width={970}
                    />
                  </div>
                </View>
                <Text
                  className="IS2"
                >
                  <div>
                    ADVERTISEMENT
                  </div>
                </Text>
              </div>
            </View>
          </div>
        </View>
      </AdPlaceholder>
    </div>
  </View>
</Ad>
`;

exports[`3. nothing if there is an error in the loading of scripts 1`] = `
<style>
.IS1 {
  height: auto;
  overflow-x: hidden;
  overflow-y: hidden;
  width: 0px;
}

.IS2 {
  left: 0px;
  position: absolute;
  top: 0px;
}

.IS3 {
  background-color: rgba(249,249,249,1.00);
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  border-top-width: 1px;
  border-right-width: 1px;
  border-bottom-width: 1px;
  border-left-width: 1px;
  color: rgba(105,105,105,1.00);
  font-family: TimesDigitalW04;
  font-size: 11px;
  letter-spacing: 1.5px;
  line-height: 15px;
  padding-bottom: 5px;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 5px;
  z-index: 1;
}

.IS4 {
  height: 250px;
  width: 970px;
}

.IS5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  align-items: center;
  background-color: rgba(249,249,249,1.00);
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  border-top-width: 1px;
  border-right-width: 1px;
  border-bottom-width: 1px;
  border-left-width: 1px;
  height: 250px;
  justify-content: center;
  -ms-flex-align: center;
  -ms-flex-pack: center;
  overflow-x: hidden;
  overflow-y: hidden;
  width: 970px;
}

.IS6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -webkit-box-pack: center;
  -webkit-flex: 1;
  -webkit-justify-content: center;
  align-items: center;
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: 0%;
  justify-content: center;
  -ms-flex: 1;
  -ms-flex-align: center;
  -ms-flex-pack: center;
}

.IS7 {
  -webkit-flex: 1;
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: 0%;
  -ms-flex: 1;
}

.IS8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -webkit-flex: 1;
  align-items: center;
  flex-grow: 1;
  flex-shrink: 1;
  flex-basis: 0%;
  -ms-flex: 1;
  -ms-flex-align: center;
}
</style>

<Ad
  baseUrl="https://www.thetimes.co.uk/"
  contextUrl="https://www.thetimes.co.uk"
  isLoading={false}
  section="news"
  slotName="header"
>
  <View
    className="IS8"
  >
    <div>
      <DOMContext
        baseUrl="https://www.thetimes.co.uk/"
        height={0}
        width={0}
      >
        <div
          className="IS1"
        />
      </DOMContext>
      <AdPlaceholder
        className="IS7"
        height={250}
        width={970}
      >
        <View
          className="IS6"
        >
          <div>
            <View
              className="IS5"
              testID="ad-placeholder"
            >
              <div
                className="IS4"
                data-testid="ad-placeholder"
              >
                <View
                  className="IS2"
                >
                  <div>
                    <Watermark
                      height={250}
                      viewBox="-630 120 1200 50"
                      width={970}
                    />
                  </div>
                </View>
                <Text
                  className="IS3"
                >
                  <div>
                    ADVERTISEMENT
                  </div>
                </Text>
              </div>
            </View>
          </div>
        </View>
      </AdPlaceholder>
    </div>
  </View>
</Ad>
`;
